--- a/www/index.html
+++ b/www/index.html
@@ -11,5 +11,7 @@
     </center>
     <hr>
     <center>hello world</center>
+    <center>hello /ROOT_PATH</center>
+    <center>hello ROOT_PATH</center>
 </body>
 </html>
